--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -31,7 +31,7 @@ inactive-opacity = 0.4;     # Default opacity of inactive windows. (0.0 - 1.0)
 active-opacity = 1.0;     # Default opacity for active windows. (0.0 - 1.0)
 frame-opacity = 0.8;      # Opacity of window titlebars and borders. (0.1 - 1.0)
 
-opacity-rule = [ "65:name = 'rofi'" ];
+opacity-rule = [ "65:name = 'rofi'", "80:class_g = 'Emacs'" ];
 # inactive-opacity-override = true; # Let inactive opacity set by 'inactive-opacity' overrides
     #value of _NET_WM_OPACITY. Bad choice.
 alpha-step = 0.06; # XRender backend: Step size for alpha pictures.
