--- a/polybar/config
+++ b/polybar/config
@@ -1,8 +1,21 @@
 [bar]   
-    include-file = $HOME/.config/polybar/bars
+    include-file = /home/gautam/.config/polybar/bars
 
 [colors]
-    include-file = $HOME/.config/polybar/colors
+    include-file = /home/gautam/.config/polybar/colors
 
 [module]
-    include-file = $HOME/.config/polybar/modules
+    include-file = /home/gautam/.config/polybar/modules
+
+[settings]
+    screenchange-reload = true
+    ;compositing-background = xor | screen
+    ;compositing-foreground = source
+    ;compositing-border = over
+
+[global/wm]
+    margin-top = 0
+    margin-bottom = 0
+    
+    ; vim:ft=dosini
+
