--- a/clearine/clearine.conf
+++ b/clearine/clearine.conf
@@ -6,7 +6,7 @@ gap-right = 70
 [command]
 logout = xfce4-session-logout --logout
 restart = xfce4-session-logout --reboot
-shutdown = systemctl poweroff
+shutdown = xfce4-session-logout --halt
 
 [card]
 background-color = {color8}
