--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -29,7 +29,7 @@ shadow-exclude = [
 menu-opacity = 1.0;     # The opacity for menus. (default 1.0)
 inactive-opacity = 0.4;     # Default opacity of inactive windows. (0.0 - 1.0)
 active-opacity = 1.0;     # Default opacity for active windows. (0.0 - 1.0)
-frame-opacity = 0.8;      # Opacity of window titlebars and borders. (0.1 - 1.0)
+frame-opacity = 1.0;      # Opacity of window titlebars and borders. (0.1 - 1.0)
 
 opacity-rule = [ "65:name = 'rofi'", "80:class_g = 'Emacs'" ];
 # inactive-opacity-override = true; # Let inactive opacity set by 'inactive-opacity' overrides
@@ -75,7 +75,7 @@ detect-client-opacity = true; # Detect _NET_WM_OPACITY on client windows, useful
     # managers not passing _NET_WM_OPACITY of client windows to frame
     # windows.
 refresh-rate = 0;   # For --sw-opti: Specify refresh rate of the screen. 0 for auto.
-vsync = "opengl";   # "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc" 
+vsync = "none";   # "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc" 
     # See man page for more details.
 dbe = false;      # Enable DBE painting mode. Rarely needed.
 paint-on-overlay = false; # Painting on X Composite overlay window. Recommended.
